<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TheCheckInApp</string>
    <string name="main_title">Android CheckIn</string>
    <string name="menu_settings">Settings</string>
    <string name="settings_title">TheCheckInApp Settings</string>
    <string name="settings_shortcut">s</string>
    <string name="music_title">Music preference</string>
    <string name="view_title">Satellite View Mode</string>
    <string name="Preferences">Preferences</string>
     <string name="second_category_title">Second Category</string>
     <string name="StartPlaybackButton">Start Playing</string>
     <string name="StopPlaybackButton">Stop Playing</string>
     
      <string name="New">see</string>
      <string name="text_here">Some places</string>
        <string name="Find_Places">Find places that are selected</string>
      
    <string name="savebutton_name">Save changes</string>
	<string name="multi_label">Multiplayer</string>
	<string name="about_label">About</string>
	<string name="exit_label">Exit</string>
	<string name="about_title">About CheckInApp</string>
	<string name="about_text">
	    This is my check in app at the beginning it stores the 
	    user data in a remote database and then it finds the 
	    current user position including the nearest points of interest!
	    </string>
	    
	    <string name="register_name">Register Screen</string>
	    <string name="insertname_text">Insert your name</string>
	    <string name="registerbuttobn_text">Register here</string>
	    <string name="startButton_name">Start Game</string>
	    <string name="title_name">Check In</string>
	    <string name="map_print">Print the places</string>
    <string name="checkIn">Checking-in...</string>
    <string name="nameChange">The nickname you chose is already taken. Pleace enter an other one...</string>
    <string name="accountNew">Creating a new account...</string>

</resources>